--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@auth0/auth0-angular": "^2.1.0",
+    "@types/three": "^0.152.0",
     "rxjs": "~7.8.0",
+    "three": "^0.152.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
