Implementation and experiments

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,5 @@ VR/ObjectReviver/*.DS_Store
 # VS Code
 VR/ObjectReviver/*.vscode
 VR/ObjectReviver/.vsconfig
+database/experiments@gmail.com/tower/texturedMesh.obj
+database/experiments@gmail.com/roseta-stone/texturedMesh.obj
